--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* {
+/* {
   border: 2px solid red;
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 .width-2 {
-  width: 75vw;
+  width: 70vw;
   margin: 0 auto;
 }
 
@@ -67,7 +67,7 @@ body {
 
 /* tiles section */
 
-#tiles-heading {
+#tiles-h2 {
   text-align: center;
 }
 
@@ -80,6 +80,7 @@ body {
   width: 150px;
   height: 250px;
   margin-bottom: 96px;
+  text-align: center;
 }
 
 .tiles-img {
@@ -105,7 +106,7 @@ body {
   margin: 24px 0;
 }
 
-.action-text {
+#action-text {
   flex: 2;
 }
 
@@ -118,6 +119,83 @@ body {
 
 /* footer */
 
-.footer-text {
+#footer-text {
   text-align: center;
+}
+
+/* style */
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+header,
+footer {
+  background-color: #1f2937;
+}
+
+#hero-h1 {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+.nav-link,
+#hero-p,
+#hero-img-text,
+#action-text,
+#footer-text {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+#nav-logo,
+#action-h3 {
+  font-size: 24px;
+  color: #f9faf8;
+  font-weight: 600;
+}
+
+#action-background,
+.button {
+  background-color: #3882f6;
+}
+
+.button {
+  color: #f9faf8;
+  text-decoration: none;
+}
+
+#tiles-h2 {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+}
+
+#quote-author {
+  color: #1f2937;
+  font-weight: 600;
+}
+
+#quote-background {
+  background-color: #e5e7eb;
+}
+
+#quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  color: #1f2937;
+}
+
+#hero-img {
+  background-color: #808080;
+}
+
+.tiles-img {
+  border: 4px solid #3882f6;
+}
+
+#button-bottom {
+  border: 2px solid #f9faf8;
 }
