--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* {
-  border: 2px solid red;
+  border: 1px solid transparent;
 }
 
 /* margins & padding*/
@@ -7,13 +7,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
 }
 
 .width-1 {
@@ -32,7 +25,7 @@ body {
 
 /* nav bar */
 
-.nav-bar {
+#nav-bar {
   display: flex;
   justify-content: space-between;
 }
@@ -49,9 +42,8 @@ body {
 
 /* hero section */
 
-.hero-info {
+#hero-info {
   display: flex;
-  padding: 48px 0;
 }
 
 #hero-info-text,
@@ -78,8 +70,7 @@ body {
 
 .tiles {
   width: 150px;
-  height: 250px;
-  margin-bottom: 96px;
+  height: fit-content;
   text-align: center;
 }
 
@@ -113,7 +104,7 @@ body {
 #action-button {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -123,7 +114,7 @@ body {
   text-align: center;
 }
 
-/* style */
+/* style font & color*/
 
 body {
   font-family: "Roboto", sans-serif;
@@ -198,4 +189,73 @@ footer {
 
 #button-bottom {
   border: 2px solid #f9faf8;
+}
+
+/* style size & shape */
+
+header {
+  margin-bottom: 48px;
+}
+
+#nav-bar,
+#hero {
+  padding-bottom: 96px;
+}
+
+#hero-info-text,
+#hero-img {
+  height: 250px;
+}
+
+#hero-info-text {
+  padding-right: 12px;
+}
+
+.button {
+  padding: 6px 24px;
+  border-radius: 8px;
+}
+
+#hero-p {
+  margin-bottom: 18px;
+}
+
+#tiles-h2 {
+  margin-bottom: 48px;
+}
+
+.tiles-img {
+  border-radius: 12px;
+  margin-bottom: 6px;
+}
+
+#action-background {
+  border-radius: 8px;
+}
+
+#quote {
+  margin: 96px auto;
+  padding: 96px 0;
+}
+
+#quote-text {
+  margin-bottom: 9px;
+}
+
+#quote-background,
+#action-background,
+#all-tiles {
+  margin-bottom: 86px;
+}
+
+#action-background {
+  padding: 24px 0;
+}
+
+#footer-text {
+  margin: 36px auto;
+}
+
+footer {
+  padding: 8px 0;
 }
